# tax-pro-agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/skills/tax-filing/: skill.md
input/: sample_tax_data.json
src/: constants.py  models.py  utils.py
src/calculators/: california.py  federal.py  schedules.py  wash_sales.py
src/extractors/: pdf_data.py
src/generators/: form_filler.py  report.py
tests/: conftest.py  test_1099_sa.py  test_california.py  test_federal.py  test_models.py  test_questionnaire.py  test_report.py  test_schedule_a.py  test_schedules.py  test_wash_sales.py
tests/fixtures/: sample_data.py
